--- a/racket.html
+++ b/racket.html
@@ -12,7 +12,7 @@
         </div>
 
         <div>
-            <img id="image" alt="Racket" src="https://www.schoeler-micke.de/media/image/65/0c/e0/I-200-122275-6-inizio-konkav-gtt45-1-8-2000x200px.jpg">
+            <img id="image" alt="Racket" src="https://cdn.pixabay.com/photo/2014/04/03/11/36/ping-pong-311935_640.png">
         </div>
 
         <div>
@@ -27,9 +27,9 @@
 
         <script>
             document.querySelector("#color").onclick = function(){
-                let red = "https://www.schoeler-micke.de/media/image/65/0c/e0/I-200-122275-6-inizio-konkav-gtt45-1-8-2000x200px.jpg";
-                let blue = "https://www.schoeler-micke.de/media/image/20/6a/b9/120-021-077-andro-I-200-blue-2000x200px.jpg";
-                let pink = "https://www.schoeler-micke.de/media/image/01/f2/5b/120-021-079-andro-I-200-pink-2000x200px.jpg";
+                let red = "https://cdn.pixabay.com/photo/2014/04/03/11/36/ping-pong-311935_640.png";
+                let blue = "https://cdn.pixabay.com/photo/2016/03/31/19/19/paddle-1294900_1280.png";
+                let pink = "https://cdn.pixabay.com/photo/2017/06/23/15/27/table-tennis-2435003_640.jpg";
                 let img = document.querySelector("#image");
                 if (img.src == red) {
                     img.src = img.src.replace(red, blue);
