--- a/stats.html
+++ b/stats.html
@@ -24,17 +24,17 @@
             <tbody>
               <tr>
                 <th scope="row">1</th>
-                <td>Jan Henke</td>
+                <td>Jan</td>
                 <td>1000</td>
               </tr>
               <tr>
                 <th scope="row">2</th>
-                <td>Hannes Gebert</td>
+                <td>Hannes</td>
                 <td>946</td>
               </tr>
               <tr>
                 <th scope="row">3</th>
-                <td>Mathis Meier</td>
+                <td>Mathis</td>
                 <td>945</td>
               </tr>
             </tbody>
