--- a/shots.html
+++ b/shots.html
@@ -22,11 +22,8 @@
               </h2>
               <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                    It is one of the commonly used attacking shots in the game. Here, the player glides the bottom side of the paddle, while holding it in a 45-degree angle, over the ball to push it ahead. The ball spins after bouncing, making it relatively difficult for the opponent to execute a timely return.
-                    <p></p>
-                    <div>
-                        <img alt="Topspin" src="https://www.allabouttabletennis.com/images/topspin-diagram.gif">
-                    </div>
+                  The topspin shot in table tennis is an offensive stroke where the player imparts a forward and upward spin to the ball by brushing the top of the ball with a closed racket face. This spin causes the ball to dip and accelerate when it bounces on the opponent's side, making it challenging to return with precision.                    <p></p>
+                <p></p>
                 </div>
               </div>
             </div>
@@ -38,11 +35,8 @@
               </h2>
               <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                    It is one of the first shots that a table tennis player is taught while being introduced to the game. Standing square of the table, the player holds the paddle with an open face, returning the ball using the paddle side facing the table.
+                  The block shot in table tennis is a defensive stroke where the player uses a nearly horizontal racket to redirect the opponent's shot with minimal spin or power. It is typically employed close to the table to counter fast-paced attacks and maintain control in the rally.
                     <p></p>
-                    <div>
-                        <img alt="Block" src="Download.webp">
-                    </div>
                 </div>
               </div>
             </div>
@@ -53,12 +47,9 @@
                 </button>
               </h2>
               <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-                <div class="accordion-body">
-                    It is a defensive shot that many players resort to when trying to negotiate spin. Staying away from the table, here, the player uses the top side of the paddle, pushing it downwards at a 45-degree angle while making contact with the bottom half of the ball. A chop can be played with both forehand and backhand, depending on the players position while receiving the ball.
+                <div class="accordion-body">                  
+                  The chop shot in table tennis is a defensive stroke where the player imparts heavy backspin to the ball by brushing the bottom of it with an open racket face. This stroke is typically used away from the table to return powerful topspin shots with a low trajectory, making it difficult for the opponent to attack effectively.
                     <p></p>
-                    <div>
-                        <img alt="Chop" src="https://www.allabouttabletennis.com/images/xbackspin-diagram.gif.pagespeed.ic.1VW9F-qHAo.webp">
-                    </div>
                 </div>
               </div>
             </div>
